res/default.css
/* ... */
#devPanel div {
    display: inline-block;
}

.toolbarIcon {
    padding-right: 15px;
    font-size: 12px;
    cursor: default;
}

.attitude {
    color: #777;
    font-size: 90%;
}

.attitude:before {
    content: "(";
}

.attitude:after {
    content: ")";
}

.trade-race > .left {
    width: 50%;
    float: left;
}

.trade-race > .right {
    width: 50%;
    float: right;
}

.trade-race .buys {
    color: #01A9DB;
    width: 40px;
    display: inline-block;
}

.trade-race .sells {
    color: green;
    width: 40px;
    display: inline-block;
}

.trade-race .ammount {
    color: #777;
}

.trade-race .ammount:before {
    content: "(";
}

.trade-race .ammount:after {
    content: ")";
}

.btn.explore {
    float: right;
    margin-right: 9px;
}

label {
    cursor: pointer;
}

label i {
    font-size: 90%;
    color: gray;
}

label:hover {
    opacity: 0.7;
}

input[type="checkbox"] {
	display: none;
}

input[type="checkbox"] + label:before {
	content: "x";
	display: inline-block;
	font: 16px sans-serif;
	margin: 0px 6px 0px 2px;
}

input[type="checkbox"]:checked + label:before {
	content: "\2713";
	font: 12px sans-serif;
}

/*New Styles*/
.achievement {
    cursor: default;
}

.achievement-header .star {
    padding-left: 6px;
    margin-top: -4px;
    font-size: 18px;
    color: orange;
}

.achievement .star {
    float: right;
    padding-right: 0px;
    margin-top: -4px;
    font-size: 18px;
    color: orange;
}

.achievement.starUnlocked .star {
    text-shadow: 1px 0px 10px Coral;
}

.statTable tr td:nth-child(2) {
    padding-left: 20px;
}

h1 {
    font-size: 12px;
    color: Coral;
    text-transform: uppercase;
    margin-top: 30px;
    font-weight: normal;
}

.expandAllBar {
    float: right;
}

#gameLog span.msg:not(.type_date)  {
    display: list-item;
    margin-left: 1.0em;
    list-style-type: circle;
}

#gameLog span.noBullet {
    list-style-type: none !important;
}

#calendarDiv {
    white-space:nowrap;
}

.right-tab-header {
    padding: 5px;
}

.right-tab-header a {
    padding: 5px;
}

.right-tab-header a.active {
    text-decoration: none;
}

.right-tab {
    height: calc(100% - 150px);
    overflow-y: hidden;
}

#sorrowTooltip {
	color: black;
}

#adsColumn {
    float: right;
    padding-right: 15px;
}

.adblock-container {
    padding: 15px;
}

.adblock-header a {
    font-size: 0.8em;
}

.adblock {
    padding-top: 25px;
}

a {
	color: #000;
}

a:hover {
	opacity: 0.6;
}

.freshMessage {
          animation: pulse 5s infinite;
  -webkit-animation: pulse 5s infinite;
     -moz-animation: pulse 5s infinite;
       -o-animation: pulse 5s infinite;
}

@keyframes pulse {
  0%,100% {color: #001F3F;}
      50% {color: #FF4136;}
}
@-webkit-keyframes pulse {
  0%,100% {color: #001F3F;}
      50% {color: #FF4136;}
}
@-moz-keyframes pulse {
  0%,100% {color: #001F3F;}
      50% {color: #FF4136;}
}
@-o-keyframes pulse {
  0%,100% {color: #001F3F;}
      50% {color: #FF4136;}
}

.flavor {
    float: right;
    display: inline-block;
}

.effectName {
    float: left;
    clear: both;
    font-size: 14px;
    color: gray;
}

/*------------------------------*/
.tooltip-inner {
    width: 280px;
}

.tooltip-inner .desc {
    max-width: 280px;
    text-align: center;
    width: 100%;
    padding-top: 4px;
    font-size: 15px;
    color: gray;
}

.tooltip-inner .desc.small {
    font-size: 60%;
    opacity: 0.8;
}

.links-block a{
    text-decoration: none;
    padding-left: 2px;
    padding-right: 2px;
}

.links-block a:hover{
    text-decoration: underline;
}

.crypto-trade .btn {
    display: inline-block !important;
    margin-right: 10px;
    width: 45%;
}

progress[value] {
    -webkit-appearance: none;
    appearance: none;
    height: 2px;
    display: block;
    width: 100%;
    margin-bottom: -1px;
}

progress[value]::-webkit-progress-bar {
    background-color: rgb(206, 206, 195);
}

progress[value]::-webkit-progress-value {
    background-color: rgb(100,200,100);
}

#loadingProgressInfo {
    padding-top: 5px;
}

/*======================================================================*/

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-button {
    width: 0px;
    height: 0px;
}

::-webkit-scrollbar-thumb {
    background: #d0d0d0;
    border-radius: 40px;
}

::-webkit-scrollbar-track {
    background: #f0f0f0;
    border-radius: 50px;
}

::-webkit-scrollbar-corner {
    background: transparent;
}

/*======================================================================*/

.tooltip-block, .tooltip-block div {
    z-index: 9999;
    display: inline-block;
    cursor: pointer;
    padding-left: 3px;
}

.tooltip-content {
    background-color: rgb(239, 239, 244);
    border: 1px solid #a8a7ac;
    position: absolute;
    margin-left: 20px;
    padding-right: 10px;
}

.copyright {
    text-decoration: none;
}

.copyright:hover {
    text-decoration: underline;
}

.link {
    cursor: pointer;
    padding-right: 10px;
}

a.link.collapse {
    opacity: 0.2;
}

a.link.collapse:hover {
    opacity: 0.9;
}

.res-toolbar {
    display: inline-block;
}

.res-toolbar.right {
    text-align: right;
    margin-right:-18px;
    float: right;
}

.res-toolbar.left {
    padding-left:5px;
}

.res-table {
    max-width: 340px;
    width: 100%;
    display: table;
    border-collapse: separate;
    border-spacing: 3px;
}

.res-row {
    padding-bottom: 4px;
    display:table-row;
}

.res-row.craft:hover {
    background-color: rgba(155, 200, 155, 0.3);
}

.res-cell {
    padding-left: 2px;
    padding-right: 2px;
    display:table-cell;
    white-space: nowrap !important;

    overflow-x: hidden;
    text-overflow: ellipsis;
}

.res-cell.resource-name {
    width: 60px;
    max-width: 85px;
}

.res-cell.resource-value {
    width: 75px;
    max-width: 90px;
}

.res-cell.resPerTick {
    cursor: pointer;
}

.res-cell.positive-weather {
    color: green;
}
/* ... */

